Made page2 more colorful

--- a/index.html
+++ b/index.html
@@ -29,5 +29,8 @@
                 <p>Hello from the mountains!</p>
             </div>
         </section>
+        <footer class="flex-container">
+            <p>Made by Andrew Creswick</p>
+        </footer>
     </body>
 </html>
