--- a/pages/page2.html
+++ b/pages/page2.html
@@ -7,10 +7,33 @@
     </head>
     <body>
         <header>
-            <h1>Page 2</h1
+            <h1>Page 2</h1>
         </header>
         <nav>
             <a id="index" href="../index.html">Index</a>
         </nav>
+        <section class="page2OL">
+            <h2>Ordered List</h2>
+            <ol>
+                <li>Dragon</li>
+                <li>Dragon</li>
+                <li>Dragon</li>
+                <li>Dragon</li>
+                <li>Dragon</li>
+                <li id="page2OLCat">Cat</li>
+                <li>Dragon</li>
+                <li>Dragon</li>
+                <li>Dragon</li>
+                <li>Dragon</li>
+            </ol>
+        </section>
+        <section class="page2UL">
+            <h2>Unordered List</h2>
+            <ul>
+                <li>Number 1</li>
+                <li>"He was number 1!"</li>
+                <li>   - Spongebob Squarepants</li>
+            </ul>
+        </section>
     </body>
 </html>
