Added an Aside to Page2

--- a/pages/page2.html
+++ b/pages/page2.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="../styles/main.css">
     </head>
     <body>
+
         <header>
             <h1>Page 2</h1>
         </header>
@@ -13,7 +14,7 @@
             <a id="index" href="../index.html">Index</a>
         </nav>
         <section class="page2OL">
-            <h2>Ordered List</h2>
+            <h2>Some Cool Animals</h2>
             <ol>
                 <li>Dragon</li>
                 <li>Dragon</li>
@@ -28,12 +29,17 @@
             </ol>
         </section>
         <section class="page2UL">
-            <h2>Unordered List</h2>
+            <h2>A joke: </h2>
             <ul>
                 <li>Number 1</li>
                 <li>"He was number 1!"</li>
                 <li>   - Spongebob Squarepants</li>
             </ul>
         </section>
+        <hr>
+        <aside>
+            <h3>About</h3>
+            <p>This section was created in HTML with CSS providing the formating.</p>
+        </aside>
     </body>
 </html>
