--- a/index.html
+++ b/index.html
@@ -7,30 +7,32 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <header>
-            <h1>Index</h1>
-            <p id="enjoyP">Please enjoy!</p>
-        </header>
-        <nav> 
-            <a id="page2" href="pages/page2.html">Page 2</a>
-            <a id="credits" href="pages/credits.html">Credits</a>
-        </nav>
-        <section>
-            <div id="Para1">
-                <p>Paragraph 1</p>
-            </div>
-            
-            <div id="Para2">
-                <p>Paragraph 2</p>
-            </div>
-        </section>
-        <section>
-            <div id="helloMount">
-                <p>Hello from the mountains!</p>
-            </div>
-        </section>
-        <footer class="flex-container">
-            <p>Made by Andrew Creswick</p>
-        </footer>
+        <main>
+            <header>
+                <h1>Index</h1>
+                <p id="enjoyP">Please enjoy!</p>
+            </header>
+            <nav> 
+                <a id="page2" href="pages/page2.html">Page 2</a>
+                <a id="credits" href="pages/credits.html">Credits</a>
+                <!-- <a id="pageSteve" href="pages/pageSteve.html">Steve</a> -->
+            </nav>
+            <section>
+                <div id="Para1">
+                    <p>Paragraph 1</p>
+                </div>
+                <div id="Para2">
+                    <p>Paragraph 2</p>
+                </div>
+            </section>
+            <section>
+                <div id="helloMount">
+                    <p>Hello from the mountains!</p>
+                </div>
+            </section>
+            <footer class="flex-container">
+                <p>Made by Andrew Creswick</p>
+            </footer>
+        </main>
     </body>
 </html>
