Added a new hover background image.

--- a/pages/page2.html
+++ b/pages/page2.html
@@ -1,45 +1,46 @@
 <!DOCTYPE html>
-<html lang="en" id="all">
+<html lang="en">
     <head>
         <title>Page 2</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../styles/main.css">
     </head>
     <body>
-
-        <header>
-            <h1>Page 2</h1>
-        </header>
-        <nav>
-            <a id="index" href="../index.html">Index</a>
-        </nav>
-        <section class="page2OL">
-            <h2>Some Cool Animals</h2>
-            <ol>
-                <li>Dragon</li>
-                <li>Dragon</li>
-                <li>Dragon</li>
-                <li>Dragon</li>
-                <li>Dragon</li>
-                <li id="page2OLCat">Cat</li>
-                <li>Dragon</li>
-                <li>Dragon</li>
-                <li>Dragon</li>
-                <li>Dragon</li>
-            </ol>
-        </section>
-        <section class="page2UL">
-            <h2>A joke: </h2>
-            <ul>
-                <li>Number 1</li>
-                <li>"He was number 1!"</li>
-                <li>   - Spongebob Squarepants</li>
-            </ul>
-        </section>
-        <hr>
-        <aside>
-            <h3>About</h3>
-            <p>This section was created in HTML with CSS providing the formating.</p>
-        </aside>
+        <main>
+            <header>
+                <h1>Page 2</h1>
+            </header>
+            <nav>
+                <a id="index" href="../index.html">Index</a>
+            </nav>
+            <section class="page2OL">
+                <h2>Some Cool Animals</h2>
+                <ol>
+                    <li>Dragon</li>
+                    <li>Dragon</li>
+                    <li>Dragon</li>
+                    <li>Dragon</li>
+                    <li>Dragon</li>
+                    <li id="page2OLCat">Cat</li>
+                    <li>Dragon</li>
+                    <li>Dragon</li>
+                    <li>Dragon</li>
+                    <li>Dragon</li>
+                </ol>
+            </section>
+            <section class="page2UL">
+                <h2>A joke: </h2>
+                <ul>
+                    <li>Number 1</li>
+                    <li>"He was number 1!"</li>
+                    <li>   - Spongebob Squarepants</li>
+                </ul>
+            </section>
+            <hr>
+            <aside>
+                <h3>About</h3>
+                <p>This section was created in HTML with CSS providing the formating.</p>
+            </aside>
+        </main>
     </body>
 </html>
