--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" id="all">
+<html lang="en">
     <head>
         <title>Index</title>
         <link rel="stylesheet" href="styles/main.css">
