--- a/pages/pageSteve.html
+++ b/pages/pageSteve.html
@@ -14,7 +14,7 @@
         </main>
         <p id="steveEye">*Moves eyebrows*</p>
         <canvas id="myCanvas" width="300" height="150"></canvas>
-        <script type="text/javascript">
+        <script>
             const myCanvas = document.getElementById("myCanvas");
             const ctx = myCanvas.getContext("2d");
             ctx.fillStyle = "green";
