Added a Hover to Cool Animals List

--- a/pages/page2.html
+++ b/pages/page2.html
@@ -13,19 +13,21 @@
             <nav>
                 <a id="index" href="../index.html">Index</a>
             </nav>
-            <section class="page2OL">
+            <section class="page2OL" draggable="true">
                 <h2>Some Cool Animals</h2>
                 <ol>
-                    <li>Dragon</li>
-                    <li>Dragon</li>
-                    <li>Dragon</li>
-                    <li>Dragon</li>
-                    <li>Dragon</li>
-                    <li id="page2OLCat">Cat</li>
-                    <li>Dragon</li>
-                    <li>Dragon</li>
-                    <li>Dragon</li>
-                    <li>Dragon</li>
+                    <li class="liHover">Dragon</li>
+                    <li class="liHover">Dragon</li>
+                    <li class="liHover">Dragon</li>
+                    <li class="liHover">Dragon</li>
+                    <li class="liHover">Dragon</li>
+                    <li class="liHover">Dragon</li>
+                    <li class="liHover">Dragon</li>
+                    <li class="liHover" id="page2OLCat">Cat</li>
+                    <li class="liHover">Dragon</li>
+                    <li class="liHover">Dragon</li>
+                    <li class="liHover">Dragon</li>
+                    <li class="liHover">Dragon</li>
                 </ol>
             </section>
             <section class="page2UL">
