Added FavIcon (Browser Tab Icon)

--- a/pages/credits.html
+++ b/pages/credits.html
@@ -3,6 +3,7 @@
     <head>
         <title>Credits</title>
         <link rel="stylesheet" href="../styles/main.css">
+        <link rel="icon" type="image/x-icon" href="../images/page.png">
     </head>
     <body>
         <nav>
