--- a/pages/page2.html
+++ b/pages/page2.html
@@ -4,6 +4,7 @@
         <title>Page 2</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../styles/main.css">
+        <link rel="icon" type="image/x-icon" href="../images/page.png">
     </head>
     <body>
         <main>
@@ -23,7 +24,7 @@
                     <li class="liHover">Dragon</li>
                     <li class="liHover">Dragon</li>
                     <li class="liHover">Dragon</li>
-                    <li class="liHover" id="page2OLCat">Cat</li>
+                    <li id="page2OLCat">Cat</li>
                     <li class="liHover">Dragon</li>
                     <li class="liHover">Dragon</li>
                     <li class="liHover">Dragon</li>
