--- a/pages/pageSteve.html
+++ b/pages/pageSteve.html
@@ -4,6 +4,7 @@
         <!-- I added this because I was trying to find something to do, but I couldn't find a picture of the actor playing Steve in the Minecraft Movie Trailer -->
         <title>I am Steve.</title>
         <link rel="stylesheet" href="../styles/main.css">
+        <link rel="icon" type="image/x-icon" href="../images/page.png">
     </head>
     <body draggable="true">
         <nav>
