--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Index</title>
         <link rel="stylesheet" href="styles/main.css">
+        <link rel="icon" type="image/x-icon" href="images/index.png">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
