Added Viewports to page2 and credits

--- a/pages/pageSteve.html
+++ b/pages/pageSteve.html
@@ -5,6 +5,7 @@
         <title>I am Steve.</title>
         <link rel="stylesheet" href="../styles/main.css">
         <link rel="icon" type="image/x-icon" href="../images/page.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body draggable="true">
         <nav>
