--- a/pages/credits.html
+++ b/pages/credits.html
@@ -4,6 +4,7 @@
         <title>Credits</title>
         <link rel="stylesheet" href="../styles/main.css">
         <link rel="icon" type="image/x-icon" href="../images/page.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <nav>
