--- a/pages/page2.html
+++ b/pages/page2.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../styles/main.css">
         <link rel="icon" type="image/x-icon" href="../images/page.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <main>
