Added picture to page2

--- a/pages/page2.html
+++ b/pages/page2.html
@@ -39,6 +39,7 @@
                     <li>"He was number 1!"</li>
                     <li>   - Spongebob Squarepants</li>
                 </ul>
+                <img src="../images/heWasNumber1.jpg" alt="A picture of Mr. Krabs having a speech bubble of Spongebob Squarepants saying: 'He was number 1'">
             </section>
             <hr>
             <aside>
