Added some finishing touches.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <footer class="flex-container">
                 <p>Made by Andrew Creswick</p>
             </footer>
+            <!--These are some tags to artificially increase the space on the page. It is used for the background image.-->
             <br>
             <br>
             <br>
