--- a/pages/page2.html
+++ b/pages/page2.html
@@ -15,7 +15,7 @@
             <nav>
                 <a id="index" href="../index.html">Index</a>
             </nav>
-            <section class="page2OL" draggable="true">
+            <section class="page2oL" draggable="true">
                 <h2>Some Cool Animals</h2>
                 <ol>
                     <li class="liHover">Dragon</li>
@@ -25,7 +25,7 @@
                     <li class="liHover">Dragon</li>
                     <li class="liHover">Dragon</li>
                     <li class="liHover">Dragon</li>
-                    <li id="page2OLCat">Cat</li>
+                    <li id="page2oLCat">Cat</li>
                     <li class="liHover">Dragon</li>
                     <li class="liHover">Dragon</li>
                     <li class="liHover">Dragon</li>
